style: Fix footer padding on mobile

--- a/layouts/css/page-modules/_linuxfoundation.styl
+++ b/layouts/css/page-modules/_linuxfoundation.styl
@@ -1,6 +1,8 @@
 .linuxfoundation-footer
     width 100%
     padding-bottom 1em
+    padding-left 0.2em
+    padding-right 0.2em
     font-size 14px
     color #fff
     background #404042
